Feat: Add task deploy

--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "together",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "together.alvarodesigns.com",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.3.1",
