refactor: private false

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "together",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "homepage": "together.alvarodesigns.com",
