--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "prima": "npx prisma init"
   },
   "dependencies": {
     "@formkit/tempo": "^0.1.2",
@@ -19,6 +20,7 @@
     "@nextui-org/react": "^2.4.6",
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/theme": "2.1.17",
+    "@prisma/engines": "^5.22.0",
     "axios": "^1.7.7",
     "firebase": "^11.0.1",
     "react": "^18.3.1",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@prisma/client": "^5.1.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
@@ -41,10 +44,16 @@
     "globals": "^15.11.0",
     "immer": "^10.1.1",
     "postcss": "^8.4.47",
-    "prisma": "^5.22.0",
+    "prisma": "^5.5.1",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
+  },
+  "prisma": {
+    "binaryTargets": [
+      "native",
+      "darwin-arm64"
+    ]
   }
 }
