--- a/package.json
+++ b/package.json
@@ -50,6 +50,10 @@
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
   },
+  "engines": {
+    "node": "^18 || ^20",
+    "npm": "^8 || ^9 || ^10"
+  },
   "prisma": {
     "binaryTargets": [
       "native",
