--- a/turbo.json
+++ b/turbo.json
@@ -2,26 +2,21 @@
     "$schema": "https://turbo.build/schema.json",
     "tasks": {
         "build": {
-            "inputs": [
-                "$TURBO_DEFAULT$",
-                ".env*"
-            ],
             "outputs": [
-                "dist/**",
-                "storybook-static/**"
+                "dist/**"
             ],
             "dependsOn": [
                 "^build"
             ]
         },
-        "lint": {
-            "dependsOn": [
-                "^lint"
-            ]
-        },
         "dev": {
             "cache": false,
             "persistent": true
+        },
+        "deploy": {
+            "dependsOn": [
+                "build"
+            ]
         },
         "clean": {
             "cache": false
