--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "together",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "homepage": "https://github.com/AlvaroDesigns/together",
   "scripts": {
@@ -17,9 +17,9 @@
     "@formkit/tempo": "^0.1.2",
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.1",
-    "@nextui-org/react": "^2.4.6",
-    "@nextui-org/system": "^2.2.5",
-    "@nextui-org/theme": "2.1.17",
+    "@nextui-org/react": "^2.6.8",
+    "@nextui-org/system": "^2.4.4",
+    "@nextui-org/theme": "^2.4.3",
     "@prisma/engines": "^5.22.0",
     "axios": "^1.7.7",
     "firebase": "^11.0.1",
