--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "together",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.2.0",
   "type": "module",
   "homepage": "https://github.com/AlvaroDesigns/together",
   "scripts": {
@@ -20,6 +20,7 @@
     "@nextui-org/react": "^2.6.8",
     "@nextui-org/system": "^2.4.4",
     "@nextui-org/theme": "^2.4.3",
+    "@nextui-org/use-theme": "^2.1.1",
     "@prisma/engines": "^5.22.0",
     "axios": "^1.7.7",
     "firebase": "^11.0.1",
