--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,7 +38,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build
-           VITE_API_BFF_URL: ${{ vars.VITE_API_BFF_URL }}
+        env:
+            VITE_API_BFF_URL: ${{ vars.VITE_API_BFF_URL }}
         run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v4
