--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "together",
   "private": true,
-  "version": "0.3.0",
+  "version": "0.4.0",
   "type": "module",
   "homepage": "https://github.com/AlvaroDesigns/together",
   "scripts": {
@@ -17,6 +17,7 @@
     "@formkit/tempo": "^0.1.2",
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.1",
+    "@internationalized/date": "^3.6.0",
     "@nextui-org/react": "^2.6.8",
     "@nextui-org/system": "^2.4.4",
     "@nextui-org/theme": "^2.4.3",
