--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "together",
   "private": true,
-  "version": "0.7.0",
+  "version": "0.8.0",
   "type": "module",
   "homepage": "https://github.com/AlvaroDesigns/together",
   "scripts": {
@@ -46,6 +46,7 @@
     "globals": "^15.11.0",
     "immer": "^10.1.1",
     "postcss": "^8.4.47",
+    "@react-aria/i18n": "^3.12.4",
     "prisma": "^5.5.1",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.2",
