--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "together",
   "private": true,
-  "version": "0.8.0",
+  "version": "1.0.0",
   "type": "module",
   "homepage": "https://github.com/AlvaroDesigns/together",
   "scripts": {
@@ -23,18 +23,21 @@
     "@nextui-org/theme": "^2.4.3",
     "@nextui-org/use-theme": "^2.1.1",
     "@prisma/engines": "^5.22.0",
+    "@react-stately/data": "^3.12.0",
     "axios": "^1.7.7",
     "firebase": "^11.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.27.0",
+    "use-debounce": "^10.0.4",
     "yup": "^1.4.0",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@prisma/client": "^5.1.1",
+    "@react-aria/i18n": "^3.12.4",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
@@ -46,7 +49,6 @@
     "globals": "^15.11.0",
     "immer": "^10.1.1",
     "postcss": "^8.4.47",
-    "@react-aria/i18n": "^3.12.4",
     "prisma": "^5.5.1",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.2",
