--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nextui-org/use-theme": "^2.1.1",
     "@prisma/engines": "^5.22.0",
     "@react-stately/data": "^3.12.0",
+    "@tanstack/react-router": "^1.97.1",
     "axios": "^1.7.7",
     "firebase": "^11.0.1",
     "react": "^18.3.1",
