--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
   "dependencies": {
     "@formkit/tempo": "^0.1.2",
     "@heroicons/react": "^2.1.5",
+    "@heroui/react": "^2.6.13",
+    "@heroui/system": "^2.4.6",
+    "@heroui/use-theme": "^2.1.1",
     "@hookform/resolvers": "^3.9.1",
     "@internationalized/date": "^3.6.0",
-    "@nextui-org/react": "^2.6.8",
-    "@nextui-org/system": "^2.4.4",
-    "@nextui-org/theme": "^2.4.3",
-    "@nextui-org/use-theme": "^2.1.1",
     "@prisma/engines": "^5.22.0",
     "@react-stately/data": "^3.12.0",
     "@tanstack/react-router": "^1.97.1",
