--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.27.0",
+    "sonner": "^1.7.2",
     "use-debounce": "^10.0.4",
     "yup": "^1.4.0",
     "zustand": "^5.0.1"
