--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "together",
   "private": true,
-  "version": "2.2.1",
+  "version": "2.3.0",
   "type": "module",
   "homepage": "https://github.com/AlvaroDesigns/together",
   "scripts": {
@@ -21,15 +21,18 @@
     "@heroui/use-theme": "^2.1.1",
     "@hookform/resolvers": "^3.9.1",
     "@internationalized/date": "^3.6.0",
+    "@maptiler/sdk": "^3.0.1",
     "@prisma/engines": "^5.22.0",
     "@react-stately/data": "^3.12.0",
     "@tanstack/react-router": "^1.97.1",
     "axios": "^1.7.7",
     "firebase": "^11.0.1",
+    "mapbox-gl": "^2.15.0",
     "react": "^18.3.1",
     "react-credit-cards-2": "^1.0.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "react-map-gl": "^7.1.8",
     "react-router-dom": "^6.27.0",
     "sonner": "^1.7.2",
     "use-debounce": "^10.0.4",
