--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "together",
   "private": true,
-  "version": "2.3.0",
+  "version": "3.0.0",
   "type": "module",
   "homepage": "https://github.com/AlvaroDesigns/together",
   "scripts": {
@@ -25,6 +25,7 @@
     "@prisma/engines": "^5.22.0",
     "@react-stately/data": "^3.12.0",
     "@tanstack/react-router": "^1.97.1",
+    "@tanstack/router-devtools": "^1.97.14",
     "axios": "^1.7.7",
     "firebase": "^11.0.1",
     "mapbox-gl": "^2.15.0",
@@ -33,9 +34,11 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-map-gl": "^7.1.8",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^6.27.0",
     "sonner": "^1.7.2",
     "use-debounce": "^10.0.4",
+    "vite-plugin-static-copy": "^2.2.0",
     "yup": "^1.4.0",
     "zustand": "^5.0.1"
   },
