--- a/package.json
+++ b/package.json
@@ -28,11 +28,15 @@
     "@tanstack/router-devtools": "^1.97.14",
     "axios": "^1.7.7",
     "firebase": "^11.0.1",
+    "html2canvas": "^1.4.1",
+    "i18next": "^24.2.2",
+    "jspdf": "^2.5.2",
     "mapbox-gl": "^2.15.0",
     "react": "^18.3.1",
     "react-credit-cards-2": "^1.0.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "react-i18next": "^15.4.0",
     "react-map-gl": "^7.1.8",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^6.27.0",
