--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "react-router-dom": "^6.27.0",
     "sonner": "^1.7.2",
     "use-debounce": "^10.0.4",
-    "vite-plugin-static-copy": "^2.2.0",
     "yup": "^1.4.0",
     "zustand": "^5.0.1"
   },
@@ -67,7 +66,8 @@
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "file:vitejs/plugin-react@latest"
+    "vite-plugin-static-copy": "^2.2.0",
+    "vite": "^6.1.0"
   },
   "engines": {
     "node": "^18 || ^20",
