--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@internationalized/date": "^3.6.0",
     "@maptiler/sdk": "^3.0.1",
     "@prisma/engines": "^5.22.0",
+    "@react-pdf/renderer": "^4.2.1",
     "@react-stately/data": "^3.12.0",
+    "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-router": "^1.97.1",
     "@tanstack/router-devtools": "^1.97.14",
     "axios": "^1.7.7",
@@ -32,6 +34,7 @@
     "i18next": "^24.2.2",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "mapbox-gl": "^2.15.0",
     "react": "^18.3.1",
     "react-credit-cards-2": "^1.0.3",
@@ -66,8 +69,8 @@
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite-plugin-static-copy": "^2.2.0",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "vite-plugin-static-copy": "^2.2.0"
   },
   "engines": {
     "node": "^18 || ^20",
