--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@eslint/js": "^9.21.0",
     "@prisma/client": "^6.4.1",
     "@react-aria/i18n": "^3.12.5",
+    "@semantic-release/changelog": "^6.0.3",
     "@tanstack/react-router": "^1.114.17",
     "@tanstack/react-router-devtools": "^1.114.21",
     "@tanstack/router-devtools": "^1.112.0",
@@ -62,14 +63,19 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "commitizen": "^4.3.1",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
+    "husky": "^9.1.7",
     "immer": "^10.1.1",
     "postcss": "^8.5.3",
     "prisma": "^6.4.1",
+    "semantic-release": "^24.2.3",
+    "standard-version": "^9.5.0",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.7.3",
     "typescript-eslint": "^8.25.0",
