--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "deploy": "gh-pages -d dist",
     "prima": "npx prisma init",
     "release": "standard-version",
-    "release:minor": "standard-version --release-as minor",
-    "release:patch": "standard-version --release-as patch",
-    "release:major": "standard-version --release-as major"
+    "release:minor": "standard-version --release-as minor && git push --follow-tags origin main",
+    "release:patch": "standard-version --release-as patch && git push --follow-tags origin main",
+    "release:major": "standard-version --release-as major && git push --follow-tags origin main"
   },
   "dependencies": {
     "@formkit/tempo": "^0.1.2",
